syntax = "proto3";
package anytype.storage;
option go_package = "github.com/anytypeio/go-anytype-library/pb/storage";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

message FileIndex {
    string mill                     = 1;
    string checksum                 = 2;
    string source                   = 3;
    string opts                     = 4;
    string hash                     = 5;
    string key                      = 6;
    string media                    = 7;
    string name                     = 8;
    int64 size                      = 9;
    google.protobuf.Timestamp added = 10;
    google.protobuf.Struct meta     = 11;
    repeated string targets         = 12;
}
